syntax = "proto3";
package bierzee;

message Session {
  string id = 1;
  int64 expiresAt = 2;
}